--- a/AOC2024/Puzzles/Puzzles.fsproj
+++ b/AOC2024/Puzzles/Puzzles.fsproj
@@ -15,6 +15,9 @@
         <Content Include="Day 2\1\Assignment.md" />
         <None Include="Day 2\1\1.fsx" />
         <Content Include="Day 2\1\input" />
+        <Content Include="Day 2\2\Assignment.md" />
+        <None Include="Day 2\2\2.fsx" />
+        <Content Include="Day 2\2\input" />
     </ItemGroup>
 
 </Project>
