solution puzzle 1 day 3

--- a/AOC2024/Puzzles/Puzzles.fsproj
+++ b/AOC2024/Puzzles/Puzzles.fsproj
@@ -18,6 +18,9 @@
         <Content Include="Day 2\2\Assignment.md" />
         <None Include="Day 2\2\2.fsx" />
         <Content Include="Day 2\2\input" />
+        <None Include="Day 3\1.fsx" />
+        <Content Include="Day 3\Assignment1.md" />
+        <Content Include="Day 3\input" />
     </ItemGroup>
 
 </Project>
