solution puzzle 2 day 3

--- a/AOC2024/Puzzles/Puzzles.fsproj
+++ b/AOC2024/Puzzles/Puzzles.fsproj
@@ -20,7 +20,137 @@
         <Content Include="Day 2\2\input" />
         <None Include="Day 3\1.fsx" />
         <Content Include="Day 3\Assignment1.md" />
-        <Content Include="Day 3\input" />
+        <Content Include="Day 3\input1" />
+        <None Include="Day 3\2.fsx" />
+        <Content Include="Day 3\input2" />
+        <Content Include="Day 3\Assignment2.md" />
+        <Content Include="Day 24\input2" />
+        <Content Include="Day 24\input1" />
+        <Content Include="Day 24\Assignment2.md" />
+        <Content Include="Day 24\Assignment1.md" />
+        <None Include="Day 24\2.fsx" />
+        <None Include="Day 24\1.fsx" />
+        <Content Include="Day 23\input2" />
+        <Content Include="Day 23\input1" />
+        <Content Include="Day 23\Assignment2.md" />
+        <Content Include="Day 23\Assignment1.md" />
+        <None Include="Day 23\2.fsx" />
+        <None Include="Day 23\1.fsx" />
+        <Content Include="Day 22\input2" />
+        <Content Include="Day 22\input1" />
+        <Content Include="Day 22\Assignment2.md" />
+        <Content Include="Day 22\Assignment1.md" />
+        <None Include="Day 22\2.fsx" />
+        <None Include="Day 22\1.fsx" />
+        <Content Include="Day 21\input2" />
+        <Content Include="Day 21\input1" />
+        <Content Include="Day 21\Assignment2.md" />
+        <Content Include="Day 21\Assignment1.md" />
+        <None Include="Day 21\2.fsx" />
+        <None Include="Day 21\1.fsx" />
+        <Content Include="Day 20\input2" />
+        <Content Include="Day 20\input1" />
+        <Content Include="Day 20\Assignment2.md" />
+        <Content Include="Day 20\Assignment1.md" />
+        <None Include="Day 20\2.fsx" />
+        <None Include="Day 20\1.fsx" />
+        <Content Include="Day 19\input2" />
+        <Content Include="Day 19\input1" />
+        <Content Include="Day 19\Assignment2.md" />
+        <Content Include="Day 19\Assignment1.md" />
+        <None Include="Day 19\2.fsx" />
+        <None Include="Day 19\1.fsx" />
+        <Content Include="Day 18\input2" />
+        <Content Include="Day 18\input1" />
+        <Content Include="Day 18\Assignment2.md" />
+        <Content Include="Day 18\Assignment1.md" />
+        <None Include="Day 18\2.fsx" />
+        <None Include="Day 18\1.fsx" />
+        <Content Include="Day 17\input2" />
+        <Content Include="Day 17\input1" />
+        <Content Include="Day 17\Assignment2.md" />
+        <Content Include="Day 17\Assignment1.md" />
+        <None Include="Day 17\2.fsx" />
+        <None Include="Day 17\1.fsx" />
+        <Content Include="Day 16\input2" />
+        <Content Include="Day 16\input1" />
+        <Content Include="Day 16\Assignment2.md" />
+        <Content Include="Day 16\Assignment1.md" />
+        <None Include="Day 16\2.fsx" />
+        <None Include="Day 16\1.fsx" />
+        <Content Include="Day 15\input2" />
+        <Content Include="Day 15\input1" />
+        <Content Include="Day 15\Assignment2.md" />
+        <Content Include="Day 15\Assignment1.md" />
+        <None Include="Day 15\2.fsx" />
+        <None Include="Day 15\1.fsx" />
+        <Content Include="Day 14\input2" />
+        <Content Include="Day 14\input1" />
+        <Content Include="Day 14\Assignment2.md" />
+        <Content Include="Day 14\Assignment1.md" />
+        <None Include="Day 14\2.fsx" />
+        <None Include="Day 14\1.fsx" />
+        <Content Include="Day 13\input2" />
+        <Content Include="Day 13\input1" />
+        <Content Include="Day 13\Assignment2.md" />
+        <Content Include="Day 13\Assignment1.md" />
+        <None Include="Day 13\2.fsx" />
+        <None Include="Day 13\1.fsx" />
+        <Content Include="Day 12\input2" />
+        <Content Include="Day 12\input1" />
+        <Content Include="Day 12\Assignment2.md" />
+        <Content Include="Day 12\Assignment1.md" />
+        <None Include="Day 12\2.fsx" />
+        <None Include="Day 12\1.fsx" />
+        <Content Include="Day 11\input2" />
+        <Content Include="Day 11\input1" />
+        <Content Include="Day 11\Assignment2.md" />
+        <Content Include="Day 11\Assignment1.md" />
+        <None Include="Day 11\2.fsx" />
+        <None Include="Day 11\1.fsx" />
+        <Content Include="Day 10\input2" />
+        <Content Include="Day 10\input1" />
+        <Content Include="Day 10\Assignment2.md" />
+        <Content Include="Day 10\Assignment1.md" />
+        <None Include="Day 10\2.fsx" />
+        <None Include="Day 10\1.fsx" />
+        <Content Include="Day 9\input2" />
+        <Content Include="Day 9\input1" />
+        <Content Include="Day 9\Assignment2.md" />
+        <Content Include="Day 9\Assignment1.md" />
+        <None Include="Day 9\2.fsx" />
+        <None Include="Day 9\1.fsx" />
+        <Content Include="Day 8\input2" />
+        <Content Include="Day 8\input1" />
+        <Content Include="Day 8\Assignment2.md" />
+        <Content Include="Day 8\Assignment1.md" />
+        <None Include="Day 8\2.fsx" />
+        <None Include="Day 8\1.fsx" />
+        <Content Include="Day 7\input2" />
+        <Content Include="Day 7\input1" />
+        <Content Include="Day 7\Assignment2.md" />
+        <Content Include="Day 7\Assignment1.md" />
+        <None Include="Day 7\2.fsx" />
+        <None Include="Day 7\1.fsx" />
+        <Content Include="Day 6\input2" />
+        <Content Include="Day 6\input1" />
+        <Content Include="Day 6\Assignment2.md" />
+        <Content Include="Day 6\Assignment1.md" />
+        <None Include="Day 6\2.fsx" />
+        <None Include="Day 6\1.fsx" />
+        <Content Include="Day 5\input2" />
+        <Content Include="Day 5\input1" />
+        <Content Include="Day 5\Assignment2.md" />
+        <Content Include="Day 5\Assignment1.md" />
+        <None Include="Day 5\2.fsx" />
+        <None Include="Day 5\1.fsx" />
+        <Content Include="Day 4\input2" />
+        <Content Include="Day 4\input1" />
+        <Content Include="Day 4\Assignment2.md" />
+        <Content Include="Day 4\Assignment1.md" />
+        <None Include="Day 4\2.fsx" />
+        <None Include="Day 4\1.fsx" />
+        <Content Include="ProjectStructure.ps1" />
     </ItemGroup>
 
 </Project>
